@@ -5,7 +5,8 @@ Changelog
 4.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Task byline: Use adminUnit abbreviation instead of label for sequence_number display.
+  [phgross]
 
 
 4.0.2 (2014-11-03)
